app/assets/stylesheets/users.scss
// Place all the styles related to the users controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.user-info {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  line-height: 1.75em;
  font-weight: bold;
  color: #374785;
  background-color: whitesmoke;
  border: 1px solid lightgrey;
  width: 30vw;
  align-items: center;
  height: 85vh;
}

.user-info p {
  max-width: 300px;
  text-align: center;
}

.table {
  padding-top: 10px;
}

/* Tabbed Boxes */
@media (min-width: 800px){
.tabset > input[type="radio"] {
  position: absolute;
  left: -200vw;
}

.tabset .tab-panel {
  display: none;
}

.tabset > input:first-child:checked ~ .tab-panels > .tab-panel:first-child,
.tabset > input:nth-child(3):checked ~ .tab-panels > .tab-panel:nth-child(2),
.tabset > input:nth-child(5):checked ~ .tab-panels > .tab-panel:nth-child(3),
.tabset > input:nth-child(7):checked ~ .tab-panels > .tab-panel:nth-child(4),
.tabset > input:nth-child(9):checked ~ .tab-panels > .tab-panel:nth-child(5),
.tabset > input:nth-child(11):checked ~ .tab-panels > .tab-panel:nth-child(6) {
  display: block;
}

/*
 Styling
*/

.tabset > label {
  position: relative;
  display: inline-block;
  padding: 15px 15px 25px;
  border: 1px solid transparent;
  border-bottom: 0;
  cursor: pointer;
  font-weight: 600;
}

.tabset > label::after {
  content: "";
  position: absolute;
  left: 15px;
  bottom: 10px;
  width: 22px;
  height: 4px;
  background: #8d8d8d;
}

.tabset > label:hover,
.tabset > input:focus + label {
  color: #06c;
}

.tabset > label:hover::after,
.tabset > input:focus + label::after,
.tabset > input:checked + label::after {
  background: #06c;
}

.tabset > input:checked + label {
  border-color: #ccc;
  border-bottom: 1px solid #fff;
  margin-bottom: -1px;
}

.tab-panel {
  padding: 30px 0;
  border-top: 1px solid #ccc;
  max-width: 70vw;
  min-width: 70vw;
}

/*
 Demo purposes only
*/
// *,
// *:before,
// *:after {
//   box-sizing: border-box;
// }
//
// body {
//   padding: 30px;
// }
//
// .tabset {
//   max-width: 65em;
// }
}

// General Styling
section.merchant-display {
  display: flex;
  flex-flow: wrap row;
  align-content: stretch;
}

img.merchant-img {
  border-radius: 80%;
}

